--- a/src/v/container/CMakeLists.txt
+++ b/src/v/container/CMakeLists.txt
@@ -1,10 +1,7 @@
-find_package(Roaring REQUIRED)
-find_package(unordered_dense REQUIRED)
-
 v_cc_library(
   NAME container
   DEPS
-    Roaring::roaring
+    roaring::roaring
     unordered_dense::unordered_dense
 )
 
