--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -67,6 +67,9 @@ find_package(xxHash CONFIG REQUIRED)
 find_package(yaml-cpp CONFIG REQUIRED)
 find_package(lz4 CONFIG REQUIRED)
 find_package(Avro CONFIG REQUIRED)
+find_package(Base64 CONFIG REQUIRED)
+find_package(Avro CONFIG REQUIRED)
+
 find_package(ZLIB REQUIRED)
 
 #find_package(GnuTLS REQUIRED)
@@ -77,9 +80,7 @@ find_package(ZLIB REQUIRED)
 include(dependencies)
 
 find_package(Seastar CONFIG REQUIRED)
-find_package(Avro REQUIRED)
 find_package(Hdrhistogram REQUIRED)
-find_package(Base64 REQUIRED)
 find_package(unordered_dense REQUIRED)
 find_program(GO_PROGRAM go REQUIRED)
 find_program(SEASTAR_JSON2CODE seastar-json2code.py REQUIRED)
