--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -69,6 +69,7 @@ find_package(lz4 CONFIG REQUIRED)
 find_package(Avro CONFIG REQUIRED)
 find_package(Base64 CONFIG REQUIRED)
 find_package(Avro CONFIG REQUIRED)
+find_package(hdr_histogram CONFIG REQUIRED)
 
 find_package(ZLIB REQUIRED)
 
@@ -80,7 +81,6 @@ find_package(ZLIB REQUIRED)
 include(dependencies)
 
 find_package(Seastar CONFIG REQUIRED)
-find_package(Hdrhistogram REQUIRED)
 find_package(unordered_dense REQUIRED)
 find_program(GO_PROGRAM go REQUIRED)
 find_program(SEASTAR_JSON2CODE seastar-json2code.py REQUIRED)
