--- a/src/transform-sdk/go/transform/internal/testdata/CMakeLists.txt
+++ b/src/transform-sdk/go/transform/internal/testdata/CMakeLists.txt
@@ -5,7 +5,7 @@ execute_process(COMMAND ${CMAKE_COMMAND} -E env
 find_package(Python3 REQUIRED COMPONENTS Interpreter)
 
 function(add_wasm_transform NAME)
-  find_program(TINYGO_BIN "tinygo")
+  find_program(TINYGO_BIN "tinygo" REQUIRED)
   set(wasm_output "${CMAKE_CURRENT_BINARY_DIR}/${NAME}.wasm")
   set(tinygo_cmd ${TINYGO_BIN} build -o ${wasm_output} -quiet -target wasi -scheduler none "${NAME}/transform.go")
   set(gopath ${CMAKE_CURRENT_BINARY_DIR}/${NAME})
