--- a/src/v/cloud_roles/BUILD
+++ b/src/v/cloud_roles/BUILD
@@ -2,31 +2,31 @@ cc_library(
     name = "cloud_roles",
     srcs = [
         "apply_abs_credentials.cc",
+        "apply_abs_credentials.h",
         "apply_abs_oauth_credentials.cc",
+        "apply_abs_oauth_credentials.h",
         "apply_aws_credentials.cc",
+        "apply_aws_credentials.h",
         "apply_credentials.cc",
         "apply_gcp_credentials.cc",
+        "apply_gcp_credentials.h",
         "aws_refresh_impl.cc",
+        "aws_refresh_impl.h",
         "aws_sts_refresh_impl.cc",
-        "gcp_refresh_impl.cc",
+        "aws_sts_refresh_impl.h",
         "azure_aks_refresh_impl.cc",
+        "azure_aks_refresh_impl.h",
         "azure_vm_refresh_impl.cc",
+        "azure_vm_refresh_impl.h",
+        "gcp_refresh_impl.cc",
+        "gcp_refresh_impl.h",
         "probe.cc",
         "refresh_credentials.cc",
         "request_response_helpers.cc",
-        "types.cc",
-        "signature.cc",
-        "azure_aks_refresh_impl.h",
-        "azure_vm_refresh_impl.h",
-        "apply_abs_oauth_credentials.h",
-        "apply_gcp_credentials.h",
-        "apply_abs_credentials.h",
-        "apply_aws_credentials.h",
-        "aws_refresh_impl.h",
-        "gcp_refresh_impl.h",
         "request_response_helpers.h",
+        "signature.cc",
         "signature.h",
-        "aws_sts_refresh_impl.h",
+        "types.cc",
     ],
     hdrs = [
         "include/cloud_roles/apply_credentials.h",
@@ -38,11 +38,11 @@ cc_library(
     includes = [
         "include",
     ],
-    deps = [
-        "@seastar//:libseastar",
-        "//src/v/base:base",
-        "//src/v/bytes:bytes",
-        "//src/v/metrics:metrics",
-    ],
     visibility = ["//visibility:public"],
+    deps = [
+        "//src/v/base",
+        "//src/v/bytes",
+        "//src/v/metrics",
+        "@seastar//:libseastar",
+    ],
 )
