--- a/src/v/random/BUILD
+++ b/src/v/random/BUILD
@@ -11,9 +11,9 @@ cc_library(
     includes = [
         "include",
     ],
-    deps = [
-        "//src/v/base:base",
-        "//src/v/crypto:crypto",
-    ],
     visibility = ["//visibility:public"],
+    deps = [
+        "//src/v/base",
+        "//src/v/crypto",
+    ],
 )
