--- a/src/v/hashing/BUILD
+++ b/src/v/hashing/BUILD
@@ -18,8 +18,8 @@ cc_library(
     includes = [
         "include",
     ],
-    deps = [
-        "//src/v/base:base",
-    ],
     visibility = ["//visibility:public"],
+    deps = [
+        "//src/v/base",
+    ],
 )
