--- a/src/v/hashing/BUILD
+++ b/src/v/hashing/BUILD
@@ -21,5 +21,6 @@ cc_library(
     visibility = ["//visibility:public"],
     deps = [
         "//src/v/base",
+        "@crc32c//:crc32c",
     ],
 )
