--- a/src/v/json/BUILD
+++ b/src/v/json/BUILD
@@ -9,6 +9,10 @@ cc_library(
         "encodings.h",
         "writer.h",
         "stringbuffer.h",
+        "json.h",
+        "prettywriter.h",
+        "reader.h",
+        "stream.h",
     ],
     include_prefix = "json",
     visibility = ["//visibility:public"],
