--- a/src/v/metrics/BUILD
+++ b/src/v/metrics/BUILD
@@ -5,6 +5,7 @@ cc_library(
     hdrs = [
         "metrics.h",
         "metrics_registry.h",
+        "prometheus_sanitize.h",
     ],
     include_prefix = "metrics",
     visibility = ["//visibility:public"],
