--- a/src/v/json/BUILD
+++ b/src/v/json/BUILD
@@ -5,14 +5,15 @@ cc_library(
     hdrs = [
         "_include_first.h",
         "allocator.h",
-        "logger.h",
+        "document.h",
         "encodings.h",
-        "writer.h",
-        "stringbuffer.h",
         "json.h",
+        "logger.h",
         "prettywriter.h",
         "reader.h",
         "stream.h",
+        "stringbuffer.h",
+        "writer.h",
     ],
     include_prefix = "json",
     visibility = ["//visibility:public"],
