--- a/src/v/utils/BUILD
+++ b/src/v/utils/BUILD
@@ -3,20 +3,22 @@ cc_library(
     srcs = [
     ],
     hdrs = [
+        "base64.h",
+        "file_io.h",
         "functional.h",
         "hdr_hist.h",
-        "mutex.h",
-        "named_type.h",
-        "static_deleter_fn.h",
-        "vint.h",
-        "tristate.h",
-        "uuid.h",
-        "unresolved_address.h",
-        "xid.h",
-        "to_string.h",
         "inet_address_wrapper.h",
         "log_hist.h",
+        "mutex.h",
+        "named_type.h",
         "prefix_logger.h",
+        "static_deleter_fn.h",
+        "to_string.h",
+        "tristate.h",
+        "unresolved_address.h",
+        "uuid.h",
+        "vint.h",
+        "xid.h",
     ],
     copts = [
     ],
