--- a/src/v/model/BUILD
+++ b/src/v/model/BUILD
@@ -6,8 +6,8 @@ cc_library(
         "compression.h",
         "fundamental.h",
         "metadata.h",
-        "timestamp.h",
         "namespace.h",
+        "timestamp.h",
         "validation.h",
     ],
     copts = [
@@ -15,8 +15,8 @@ cc_library(
     include_prefix = "model",
     visibility = ["//visibility:public"],
     deps = [
-        "//src/v/bytes:bytes",
-        "//src/v/serde:serde",
-        "//src/v/utils:utils",
+        "//src/v/bytes",
+        "//src/v/serde",
+        "//src/v/utils",
     ],
 )
