--- a/src/v/net/BUILD
+++ b/src/v/net/BUILD
@@ -2,40 +2,40 @@ cc_library(
     name = "net",
     srcs = [
         "batched_output_stream.cc",
-        "dns.cc",
-        "transport.cc",
-        "connection.cc",
         "conn_quota.cc",
-        "server.cc",
+        "connection.cc",
+        "dns.cc",
         "probes.cc",
+        "server.cc",
         "tls.cc",
+        "transport.cc",
     ],
     hdrs = [
-        "include/net/conn_quota.h",
-        "include/net/dns.h",
-        "include/net/tls.h",
         "include/net/batched_output_stream.h",
-        "include/net/connection.h",
-        "include/net/transport.h",
-        "include/net/server.h",
-        "include/net/server_probe.h",
         "include/net/client_probe.h",
-        "include/net/types.h",
-        "include/net/exceptions.h",
+        "include/net/conn_quota.h",
+        "include/net/connection.h",
         "include/net/connection_rate.h",
         "include/net/connection_rate_counter.h",
+        "include/net/dns.h",
+        "include/net/exceptions.h",
+        "include/net/server.h",
+        "include/net/server_probe.h",
+        "include/net/tls.h",
         "include/net/tls_certificate_probe.h",
+        "include/net/transport.h",
+        "include/net/types.h",
     ],
     includes = [
         "include",
     ],
     visibility = ["//visibility:public"],
     deps = [
+        "//src/v/base",
+        "//src/v/config",
+        "//src/v/metrics",
+        "//src/v/serde",
+        "//src/v/utils",
         "@seastar//:libseastar",
-        "//src/v/base:base",
-        "//src/v/utils:utils",
-        "//src/v/serde:serde",
-        "//src/v/config:config",
-        "//src/v/metrics:metrics",
     ],
 )
