--- a/src/v/json/BUILD
+++ b/src/v/json/BUILD
@@ -7,10 +7,13 @@ cc_library(
         "allocator.h",
         "document.h",
         "encodings.h",
+        "istreamwrapper.h",
         "json.h",
         "logger.h",
+        "ostreamwrapper.h",
         "prettywriter.h",
         "reader.h",
+        "schema.h",
         "stream.h",
         "stringbuffer.h",
         "writer.h",
