--- a/src/v/cloud_storage_clients/BUILD
+++ b/src/v/cloud_storage_clients/BUILD
@@ -12,8 +12,16 @@ cc_library(
         "xml_sax_parser.cc",
     ],
     hdrs = [
+        "s3_error.h",
+        "abs_error.h",
         "abs_client.h",
+        "s3_client.h",
         "client.h",
+        "client_probe.h",
+        "util.h",
+        "types.h",
+        "configuration.h",
+        "client_pool.h",
         "xml_sax_parser.h",
     ],
     include_prefix = "cloud_storage_clients",
