--- a/src/v/model/BUILD
+++ b/src/v/model/BUILD
@@ -9,6 +9,7 @@ cc_library(
         "namespace.h",
         "timestamp.h",
         "validation.h",
+        "timeout_clock.h",
     ],
     copts = [
     ],
