--- a/src/v/storage/BUILD
+++ b/src/v/storage/BUILD
@@ -6,3 +6,120 @@ cc_library(
     include_prefix = "storage",
     visibility = ["//visibility:public"],
 )
+
+cc_library(
+    name = "storage",
+    srcs = [
+        "segment_reader.cc",
+        "segment_deduplication_utils.cc",
+        "log_manager.cc",
+        "disk_log_impl.cc",
+        "disk_log_appender.cc",
+        "parser.cc",
+        "log_reader.cc",
+        "log_replayer.cc",
+        "offset_translator_state.cc",
+        "probe.cc",
+        "record_batch_builder.cc",
+        "logger.cc",
+        "segment_appender.cc",
+        "segment_set.cc",
+        "segment.cc",
+        "segment_index.cc",
+        "record_batch_utils.cc",
+        "storage_resources.cc",
+        "batch_cache.cc",
+        "index_state.cc",
+        "lock_manager.cc",
+        "types.cc",
+        "spill_key_index.cc",
+        "compacted_index_chunk_reader.cc",
+        "snapshot.cc",
+        "kvstore.cc",
+        "segment_utils.cc",
+        "compaction_reducers.cc",
+        "parser_utils.cc",
+        "readers_cache.cc",
+        "backlog_controller.cc",
+        "compaction_controller.cc",
+        "offset_to_filepos.cc",
+        "offset_translator.cc",
+        "fs_utils.cc",
+        "file_sanitizer_types.cc",
+        "api.cc",
+        "node.cc",
+        "key_offset_map.cc",
+    ],
+    hdrs = [
+        "api.h",
+        "backlog_controller.h",
+        "batch_cache.h",
+        "chunk_cache.h",
+        "compacted_index.h",
+        "compacted_index_chunk_reader.h",
+        "compacted_index_reader.h",
+        "compacted_index_writer.h",
+        "compacted_offset_list.h",
+        "compaction_controller.h",
+        "compaction_reducers.h",
+        "config.h",
+        "directories.h",
+        "disk_log_appender.h",
+        "disk_log_impl.h",
+        "exceptions.h",
+        "failure_probes.h",
+        "file_sanitizer.h",
+        "file_sanitizer_types.h",
+        "fs_utils.h",
+        "fwd.h",
+        "index_state.h",
+        "index_state_serde_compat.h",
+        "key_offset_map.h",
+        "kvstore.h",
+        "lock_manager.h",
+        "log.h",
+        "log_appender.h",
+        "log_housekeeping_meta.h",
+        "log_manager.h",
+        "log_reader.h",
+        "log_replayer.h",
+        "logger.h",
+        "node.h",
+        "ntp_config.h",
+        "offset_assignment.h",
+        "offset_to_filepos.h",
+        "offset_translator.h",
+        "offset_translator_state.h",
+        "parser.h",
+        "parser_errc.h",
+        "parser_utils.h",
+        "probe.h",
+        "readers_cache.h",
+        "readers_cache_probe.h",
+        "record_batch_builder.h",
+        "record_batch_utils.h",
+        "scoped_file_tracker.h",
+        "segment.h",
+        "segment_appender.h",
+        "segment_appender_chunk.h",
+        "segment_deduplication_utils.h",
+        "segment_index.h",
+        "segment_reader.h",
+        "segment_set.h",
+        "segment_utils.h",
+        "snapshot.h",
+        "spill_key_index.h",
+        "storage_resources.h",
+        "translating_reader.h",
+        "types.h",
+        "version.h",
+    ],
+    include_prefix = "storage",
+    visibility = ["//visibility:public"],
+    deps = [
+        "//src/v/bytes",
+        "//src/v/model",
+        "//src/v/config",
+        "//src/v/metrics",
+    ],
+)
