--- a/src/v/security/BUILD
+++ b/src/v/security/BUILD
@@ -8,3 +8,20 @@ cc_library(
     include_prefix = "security",
     visibility = ["//visibility:public"],
 )
+
+cc_library(
+    name = "license",
+    srcs = [
+        "license.cc",
+    ],
+    hdrs = [
+        "license.h",
+    ],
+    include_prefix = "security",
+    visibility = ["//visibility:public"],
+    deps = [
+        "//src/v/base",
+        "//src/v/serde",
+        "//src/v/json",
+    ]
+)
