--- a/src/v/cluster/BUILD
+++ b/src/v/cluster/BUILD
@@ -10,3 +10,16 @@ cc_library(
         "//src/v/model",
     ],
 )
+
+cc_library(
+    name = "features",
+    hdrs = [
+        "features.h",
+    ],
+    include_prefix = "cluster",
+    visibility = ["//visibility:public"],
+    deps = [
+        "//src/v/utils",
+        "//src/v/model",
+    ],
+)
