--- a/src/v/model/BUILD
+++ b/src/v/model/BUILD
@@ -14,6 +14,7 @@ cc_library(
         "record_batch_types.h",
         "record_utils.h",
         "record_batch_reader.h",
+        "limits.h",
     ],
     copts = [
     ],
