--- a/src/v/reflection/BUILD
+++ b/src/v/reflection/BUILD
@@ -6,6 +6,9 @@ cc_library(
         "arity.h",
         "to_tuple.h",
         "type_traits.h",
+        "adl.h",
+        "for_each_field.h",
+        "async_adl.h",
     ],
     copts = [
     ],
