--- a/src/v/raft/BUILD
+++ b/src/v/raft/BUILD
@@ -9,3 +9,53 @@ cc_library(
         "//src/v/utils",
     ],
 )
+
+cc_library(
+    name = "raft",
+    hdrs = [
+        "append_entries_buffer.h",
+        "configuration_bootstrap_state.h",
+        "configuration_manager.h",
+        "consensus.h",
+        "consensus_client_protocol.h",
+        "consensus_utils.h",
+        "coordinated_recovery_throttle.h",
+        "errc.h",
+        "event_manager.h",
+        "follower_queue.h",
+        "follower_stats.h",
+        "fundamental.h",
+        "fwd.h",
+        "group_configuration.h",
+        "group_manager.h",
+        "heartbeat_manager.h",
+        "heartbeats.h",
+        "logger.h",
+        "mutex_buffer.h",
+        "mux_state_machine.h",
+        "offset_monitor.h",
+        "persisted_stm.h",
+        "probe.h",
+        "recovery_memory_quota.h",
+        "recovery_scheduler.h",
+        "recovery_stm.h",
+        "replicate.h",
+        "replicate_batcher.h",
+        "replicate_entries_stm.h",
+        "replication_monitor.h",
+        "rpc_client_protocol.h",
+        "service.h",
+        "state_machine.h",
+        "state_machine_base.h",
+        "state_machine_manager.h",
+        "timeout_jitter.h",
+        "transfer_leadership.h",
+        "types.h",
+        "vote_stm.h",
+    ],
+    include_prefix = "raft",
+    visibility = ["//visibility:public"],
+    deps = [
+        "//src/v/rpc",
+    ],
+)
