--- a/src/v/BUILD
+++ b/src/v/BUILD
@@ -4,6 +4,7 @@ cc_library(
     ],
     hdrs = [
         "version.h",
+        "outcome_future_utils.h",
     ],
     include_prefix = "version",
     visibility = ["//visibility:public"],
