--- a/src/v/cluster/BUILD
+++ b/src/v/cluster/BUILD
@@ -12,6 +12,29 @@ cc_library(
 )
 
 cc_library(
+    name = "snapshots",
+    hdrs = [
+        "snapshots.h",
+    ],
+    include_prefix = "cluster",
+    visibility = ["//visibility:public"],
+    deps = [
+    ],
+)
+
+cc_library(
+    name = "notification",
+    hdrs = [
+        "notification.h",
+    ],
+    include_prefix = "cluster",
+    visibility = ["//visibility:public"],
+    deps = [
+        "//src/v/utils",
+    ],
+)
+
+cc_library(
     name = "features",
     hdrs = [
         "features.h",
